--- a/frontend/src/components/TextEditor.css
+++ b/frontend/src/components/TextEditor.css
@@ -35,3 +35,13 @@
 .ql-snow .ql-picker.ql-size {
   width: 80px;
 }
+
+/* .ql-container.ql-snow { 
+  border: none !important;
+}
+
+.ql-toolbar {
+  display: flex;
+  justify-content: center;
+  border: none !important;
+} */
